# rusty_sensor

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  outputFile  partitions_two_ota.csv
.devcontainer/: devcontainer.json
app/: Cargo.toml  Readme.md
app/src/: lib.rs
app/src/app/: app.rs
app/src/domain/: domain.rs
app/src/rust_proto/: algorithim.rs  mod.rs
app_algorithims/: Cargo.toml
app_algorithims/src/: lib.rs
docs/: README.md
platform/: Cargo.toml  Readme.md  partitions_two_ota.csv  sdkconfig.defaults
platform/.devcontainer/: devcontainer.json
platform/src/: main.rs
platform/src/bluetooth/: ble.rs
platform/src/drivers/: bmi160_sensor.rs  button.rs  lsm303agr.rs  mod.rs
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
src/drivers/: button.rs  mod.rs
