[package]
name = "rusty-sensor"
version = "0.1.0"
authors = ["Lance Kraakman <lancekraakman@outlook.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
lsm303agr = "0.2.2"


[build-dependencies]
embuild = "0.31.0"
