[package]
name = "rusty-sensor"
version = "0.1.0"
authors = ["Lance Kraakman <lancekraakman@outlook.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
embedded-svc = "0.24.*"
embedded-hal = { version = "0.2.7", package = "embedded-hal" }
embedded_hal_1 = { version = "1.0.0-alpha.9", package = "embedded-hal" }
esp-idf-hal = "0.40.*"
esp-idf-sys = { version = "0.32.*", features = ["binstart"] }
lsm303agr = "0.2.2"
esp-idf-svc = { version = "0.45.*" }
esp32-nimble = "0.0.7"
log = { version = "0.4", default-features = false }
protobuf = "3.2.0"
app = { path = "app" }
bmi160 = "0.1.2"
crossbeam-channel = "0.5.8"
# app_algorithims = { path = "app_algorithims" }

[package.metadata.espflash]
partition_table = "partitions_two_ota.csv"

[build-dependencies]
embuild = "0.31.0"
